alignment issues

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -209,4 +209,14 @@ span.checkbox {
     padding: 0.5em;
   }
 
+  
+  .coffee_pic{
+  padding-left: 0;
+  }
+
+  .hands {
+    margin-top: -13%;
+    padding-left: 33%;
+  }
+
 }
